--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,94 +1,63 @@
 body{
-    color:#ffffff;
-    background: #39393d;
-    background-image: url("/images/background-tile.jpg");
-    font-family: futura-std-light, helvetica;
+	background-color:#d9d9d9;
+	color: #777
 }
 
+/* To allow scaling to large screens */
 .row {
     max-width: 100%;
     max-height: 100%;
 }
-/* =========header========= */
 
-#logomoon, #logotext {
-    text-align: right;
+/* Header ---------------------- */
+header{
+	background-color:#91D5D6;
 }
 
-.blue-line {
-    background: #dee0d6;
-    height: 0.625em;
+div.headerbar{
+	margin-top:1em;
+	padding-left: 1em;
+	background-color: #33CCCC;
 }
 
-div.nopadding {
-    padding:0;
+/* Menu ---------------------- */
+
+div.menubar{
+	margin-top:0.5em;
+	margin-bottom:0.5em; 
+	padding:0;
 }
 
-.nomargin {
-    margin: 0;
-}
-/* =========menu========= */
-
-.menu {
-    background: #56565c;
-    font-family:  helvetica, futura-std-heavy;
-    font-weight: bold;
-    text-transform: capitalize;
+div.menubar-xs{
+	margin-top:0.5em;
+	margin-bottom:0.5em; 
+	padding:0;
+	margin-left: 2em;
 }
 
-.menu li {
-    text-align: center;
-    padding: 0;
+span.menubutton {
+	font-size: 1.8em;
 }
 
-.menu a {
-    display: block;
-    padding-top:0.9em;
-    padding-bottom: 0.25em;
-    color: grey;
+.btn-group-lg > a.btn:hover, .btn-group-lg > a.btn:active, .btn-group-lg > a.btn:focus {
+	color:#00000;
+	background-color: #008cba;
 }
 
-.menu a:hover {
-    background: #202021;
+.btn-group-lg > a.btn {
+	padding:4px;
+	font-size: 16px;
+	border-radius: 0px;
+	color: #ffffff;
+  	background-color: #1B6666;	
 }
 
-.menu a:visited {
-    color: #A4A4A5;
-}
+/* Content ---------------------- */
 
-.menu-small ul {
-    list-style-type: none;
-    padding:0;
-    margin:0;
-}
-
-.menu-small li {
-    padding:0;
-}
-
-
-
-/* =========content========= */
-
-a, a:visited{
-	color: #7f7b73;
-}
-
-ul {
-	padding-left:2em;
-}
-
-
-section {
-    margin-top: 1.5em;
-    background: #acb4bf;
-    color: #17213b;
-    padding: 1em 2em;
-}
-
-h3 {
-    text-transform: capitalize;
-    font-weight: bold;
+div.content{
+	background-color: #FFFFFF;
+	padding:2em;
+	
 }
 
 img.mugshot {
@@ -101,4 +70,55 @@ img.centered {
     margin-left: auto;
     margin-right: auto;
 }
+
+.map {
+	margin-top:2em;
+	text-align: center;
+}
+
+ul.dr-roles{
+	font-size: 80%;
+}
+
+/* Making the content 100% */
+
+html, body, #wrapper {
+	height:100%;
+}
+
+body > #wrapper{height: auto; min-height: 100%;}
+
+section, div.contentcontainer, div.content {
+	padding-bottom: 20px; /*  same height as the footer */
+    overflow:hidden;
+    top:0px; bottom: 0; left: 0; right: 0;     
+}
+
+footer {
+	position: relative;
+    margin-top: -20px; /* negative value of footer height */
+    height: 20px;
+    clear:both;
+}
+
+.clearfix:after {content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;}
+.clearfix {display: inline-block;}
+
+iframe#introlution {
+	width:100%;
+	height:60em;
+	border:none;
+}
+
+/* Footer ---------------------- */
+
+footer {
+	font-size: 50%;
+}
+
+
 
