--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -1,109 +1,130 @@
+{% assign grid_columns = 'col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10 col-sm-12' %}
+
 <!DOCTYPE html>
-<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ArchiWise</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- own markup -->
+	<link rel="stylesheet" href="stylesheets/styles.css" />
+    
+	{% if page.keywords %}
+		<meta name="keywords" content="{{page.keywords | join: ','}}" />
+		{% else %}
+		<meta name="keywords" content="{{site.keywords | join: ','}}" />
+	{% endif %}
+	{% if page.description %}
+		<meta name="description" content="{{page.description}}" />
+		{% else %}
+		<meta name="description" content="{{site.description}}" />
+	{% endif %}
+    <meta name="robots" content="{{page.index}}INDEX,{{page.follow}}FOLLOW"/>
+    <title>
+		{{site.main_title}} - {{page.title}}
+	</title>
+	
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-    	<!-- foundation versie 5 -->
-		<link rel="stylesheet" href="stylesheets/normalize.css" /> 
-        <link rel="stylesheet" href="stylesheets/foundation.css" />
-       
-        <!-- own markup -->
-        <link rel="stylesheet" href="stylesheets/styles.css" />
-		          
-		<script src="js/modernizr.js"></script> 
-          
-	</head>
-  <body>  
-    <div class="row">
-        <div class="small-8 large-offset-1 large-7 columns nopadding" id="logotext">
-            <a href="index.html"><img src="/images/logoDark.png" alt="ArchiWise" title="ArchiWise"></a>
-        </div>
-    </div>
 
-    <div class="row"> <!-- blue line -->
-        <div class="small-12 columns blue-line"></div>
-    </div>
+  <body>
+  	<div id="wrapper" >
+		<header>
+			<div class="row">
+				<div class="{{ grid_columns }} headerbar">
+					<img src="/images/logoDark.png" class="img-responsive"/>
+				</div>
+			</div>
+		</header>
+		<section>
+			<nav class="row">
+				<div class="{{ grid_columns }} menubar">
+					<div class="btn-group btn-group-lg btn-group-justified hidden-xs">
+						<a href="index.html" type="button" class="btn btn-default">Home</a>
+						<a href="index.php?page=services" type="button" class="btn btn-default">Services</a>
+						<a href="index.php?page=news" type="button" class="btn btn-default">News</a>
+						<a href="index.php?page=references" type="button" class="btn btn-default">References</a>
+						<a href="about.html" type="button" class="btn btn-default">About Us</a>
+						<a href="index.php?page=contact" type="button" class="btn btn-default">Contact</a>				
+					</div>
+					
+					<div class="btn-group btn-group-lg btn-group-vertical visible-xs">
+						<a href="index.html" type="button" class="btn btn-default" id="menu_home">Welkom</a>
+						<a href="afspraak.html" type="button" class="btn btn-default" id="menu_afspraak">Afspraak</a>
+						<div class="btn-group btn-group-lg">
+							<a href="praktijk.html" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="menu_praktijk">Praktijk <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+								  <li><a href="praktijk.html">Praktijkvisie</a></li>
+								  <li><a href="terecht.html">Je kan bij ons terecht voor...</a></li>
+								</ul>
+						</div>
+						<a href="artsen.html" type="button" class="btn btn-default" id="menu_artsen">Artsen</a>
+						<div class="btn-group btn-group-lg">
+							<a href="praktischeinfo.html" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="menu_praktisch">Praktische info <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+					<!--			  <li><a href="praktisch.html" id="praktisch">Praktische info</a></li> -->
+								  <li><a href="praktischeinfo.html#raadplegingen" id="praktisch#raadplegingen">Raadplegingen</a></li>
+								  <li><a href="praktischeinfo.html#huisbezoeken" id="praktisch#huisbezoeken">Huisbezoeken</a></li>
+								  <li><a href="praktischeinfo.html#spoedgevallen" id="praktisch#spoedgevallen">Spoedgevallen</a></li>
+								  <li><a href="praktischeinfo.html#resultaten" id="praktisch#resultaten">Resultaten</a></li>
+								  <li><a href="praktischeinfo.html#voorschriften" id="praktisch#voorschriften">Voorschriften</a></li>
+								  <li><a href="praktischeinfo.html#gmd" id="praktisch#gmd">Globaal medisch dossier (GMD)</a></li>
+								  <li><a href="praktischeinfo.html#wacht" id="praktisch-wacht">Wachtdiensten</a></li>				  										  								  								  
+								  <li><a href="praktischeinfo.html#afgevaardigden" id="praktisch#afgevaardigden">Medisch afgevaardigden</a></li>
+								</ul>
+						</div>
+						<a href="locatie.html" type="button" class="btn btn-default" id="menu_locatie">Locatie</a>					
+					</div>
+				</div>
+			</nav>
+			<div class="row contentcontainer">
+				<div class="{{ grid_columns }} content">
+				
+					{{ content}}
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="row">        
+				<div class="{{grid_columns}}">					
+					&copy; archi<b>wise</b> bvba. Contact us at <SCRIPT TYPE="text/javascript">
+					<!-- 
+					addd=('in' + 'fo@' + 'archi' + 'wise.com')
+					document.write('<A href="mailto:' + addd + '">' + addd + '</a>')
+					 //-->
+					</script>
+					<NOSCRIPT>
+						<em> [email address protected, please enable JavaScript] </em>
+					</NOSCRIPT> or call +32 (0) 486 88 41 36.
+				</div> 
+			</div>
+		</footer>
+	</div>
+	
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="javascripts/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="javascripts/bootstrap.min.js"></script>
+  	<script src="javascripts/respond.js"></script>
+  	<script type="text/javascript">
+  		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-19062784-1']);
+  		_gaq.push(['_trackPageview']);
 
-    <div class="show-for-medium-up row menu">
-        <div class="small-12 large-centered large-8 columns nopadding">
-            <ul class="small-block-grid-6 nomargin">
-                <li id="menu_game">
-                    <a href="game.html">the game</a>
-                </li>
-                <li id="menu_technology">
-                    <a href="technology.html">technology</a>
-                </li>
-
-                <li id="menu_practical">
-                    <a href="practical.html">practical</a>
-                </li>
-                <li id="menu_about">
-                    <a href="about.html">history</a>
-                </li>
-                <li id="menu_references">
-                    <a href="references.html">references</a>
-                </li>
-                <li id="menu_contact">
-                    <a href="contact.html">contact</a>
-                </li>
-            </ul>
-        </div>
-   </div>
-   
-    <div class="hide-for-medium-up menu menu-small">
-            <ul>
-                <li id="menu_game">
-                    <a href="game.html">the game</a>
-                </li>
-                <li id="menu_technology">
-                    <a href="technology.html">technology</a>
-                </li>
-                <li id="menu_practical">
-                    <a href="practical.html">practical</a>
-                </li>
-                <li id="menu_about">
-                    <a href="about.html">history</a>
-                </li>
-                <li id="menu_references">
-                    <a href="references.html">references</a>
-                </li>
-                <li id="menu_contact">
-                    <a href="contact.html">contact</a>
-                </li>
-            </ul>
-   </div>
-
-   <div class="row">  <!-- content -->
-        <div class="small-12 large-centered large-8 columns nopadding">
-        <section>
-            {{content}}
-        </section>
-        </div>
-   </div>
-
-<style typ="text/css">
-    #{{page.active_menu_id}}, #{{page.active_menu_id}} a {
-        background: #DEE0D6;
-    }
-</style>
-
+  		(function() {
+    		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  		})();
+   </script>
   </body>
-
-<!-- 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-45023469-1', 'archiwise.com');
-      ga('send', 'pageview');
-
-    </script>
- -->
-
-  
+ 
 </html>
