--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -53,35 +53,16 @@
 						<a href="index.php?page=news" type="button" class="btn btn-default">News</a>
 						<a href="index.php?page=references" type="button" class="btn btn-default">References</a>
 						<a href="about.html" type="button" class="btn btn-default">About Us</a>
-						<a href="index.php?page=contact" type="button" class="btn btn-default">Contact</a>				
+						<a href="contact.html" type="button" class="btn btn-default">Contact</a>				
 					</div>
 					
 					<div class="btn-group btn-group-lg btn-group-vertical visible-xs">
-						<a href="index.html" type="button" class="btn btn-default" id="menu_home">Welkom</a>
-						<a href="afspraak.html" type="button" class="btn btn-default" id="menu_afspraak">Afspraak</a>
-						<div class="btn-group btn-group-lg">
-							<a href="praktijk.html" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="menu_praktijk">Praktijk <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-								  <li><a href="praktijk.html">Praktijkvisie</a></li>
-								  <li><a href="terecht.html">Je kan bij ons terecht voor...</a></li>
-								</ul>
-						</div>
-						<a href="artsen.html" type="button" class="btn btn-default" id="menu_artsen">Artsen</a>
-						<div class="btn-group btn-group-lg">
-							<a href="praktischeinfo.html" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="menu_praktisch">Praktische info <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-					<!--			  <li><a href="praktisch.html" id="praktisch">Praktische info</a></li> -->
-								  <li><a href="praktischeinfo.html#raadplegingen" id="praktisch#raadplegingen">Raadplegingen</a></li>
-								  <li><a href="praktischeinfo.html#huisbezoeken" id="praktisch#huisbezoeken">Huisbezoeken</a></li>
-								  <li><a href="praktischeinfo.html#spoedgevallen" id="praktisch#spoedgevallen">Spoedgevallen</a></li>
-								  <li><a href="praktischeinfo.html#resultaten" id="praktisch#resultaten">Resultaten</a></li>
-								  <li><a href="praktischeinfo.html#voorschriften" id="praktisch#voorschriften">Voorschriften</a></li>
-								  <li><a href="praktischeinfo.html#gmd" id="praktisch#gmd">Globaal medisch dossier (GMD)</a></li>
-								  <li><a href="praktischeinfo.html#wacht" id="praktisch-wacht">Wachtdiensten</a></li>				  										  								  								  
-								  <li><a href="praktischeinfo.html#afgevaardigden" id="praktisch#afgevaardigden">Medisch afgevaardigden</a></li>
-								</ul>
-						</div>
-						<a href="locatie.html" type="button" class="btn btn-default" id="menu_locatie">Locatie</a>					
+						<a href="index.html" type="button" class="btn btn-default">Home</a>
+						<a href="index.php?page=services" type="button" class="btn btn-default">Services</a>
+						<a href="index.php?page=news" type="button" class="btn btn-default">News</a>
+						<a href="index.php?page=references" type="button" class="btn btn-default">References</a>
+						<a href="about.html" type="button" class="btn btn-default">About Us</a>
+						<a href="contact.html" type="button" class="btn btn-default">Contact</a>					
 					</div>
 				</div>
 			</nav>
