--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -50,8 +50,8 @@
 					<div class="btn-group btn-group-lg btn-group-justified hidden-xs">
 						<a href="index.html" type="button" class="btn btn-default">Home</a>
 						<a href="index.php?page=services" type="button" class="btn btn-default">Services</a>
-						<a href="index.php?page=news" type="button" class="btn btn-default">News</a>
-						<a href="index.php?page=references" type="button" class="btn btn-default">References</a>
+						<a href="news.html" type="button" class="btn btn-default">News</a>
+						<a href="references.html" type="button" class="btn btn-default">References</a>
 						<a href="about.html" type="button" class="btn btn-default">About Us</a>
 						<a href="contact.html" type="button" class="btn btn-default">Contact</a>				
 					</div>
@@ -59,8 +59,8 @@
 					<div class="btn-group btn-group-lg btn-group-vertical visible-xs">
 						<a href="index.html" type="button" class="btn btn-default">Home</a>
 						<a href="index.php?page=services" type="button" class="btn btn-default">Services</a>
-						<a href="index.php?page=news" type="button" class="btn btn-default">News</a>
-						<a href="index.php?page=references" type="button" class="btn btn-default">References</a>
+						<a href="news.html" type="button" class="btn btn-default">News</a>
+						<a href="references.html" type="button" class="btn btn-default">References</a>
 						<a href="about.html" type="button" class="btn btn-default">About Us</a>
 						<a href="contact.html" type="button" class="btn btn-default">Contact</a>					
 					</div>
