--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,7 +21,7 @@ header{
 
 div.headerbar{
 	margin-top:1em;
-	padding-left: 1em;
+	padding-left: 1.5em;
 	background-color:#39393D;
 }
 
@@ -31,6 +31,7 @@ div.menubar{
 	margin-top:0.5em;
 	margin-bottom:0.5em; 
 	padding:0;
+	padding-left:1.5em;
 }
 
 div.menubar-xs{
@@ -59,13 +60,16 @@ span.menubutton {
 
 /* Content ---------------------- */
 
+div.contentcontainer{
+	padding-left: 1.5em;
+}
+
 div.content{
 	background-color: #FFFFFF;
 	padding:2em;
 	border: solid;
 	border-width: thin;
 	border-color: #CECFCD;
-	
 }
 
 img.mugshot {
@@ -92,33 +96,6 @@ a:link, a:visited {
 	color:#8B8A15;
 }
 
-/* Making the content 100% */
-
-html, body, #wrapper {
-	height:100%;
-}
-
-body > #wrapper{height: auto; min-height: 100%;}
-
-section, div.contentcontainer, div.content {
-	padding-bottom: 20px; /*  same height as the footer */
-    overflow:hidden;
-    top:0px; bottom: 0; left: 0; right: 0;     
-}
-
-footer {
-	position: relative;
-    margin-top: -20px; /* negative value of footer height */
-    height: 20px;
-    clear:both;
-}
-
-.clearfix:after {content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;}
-.clearfix {display: inline-block;}
 
 
 span.archiwise{
