--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- own markup -->
-	<link rel="stylesheet" href="stylesheets/styles.css" />
+	<link rel="stylesheet" href="/stylesheets/styles.css" />
     
 	{% if page.keywords %}
 		<meta name="keywords" content="{{page.keywords | join: ','}}" />
@@ -50,7 +50,7 @@
 					<div class="btn-group btn-group-lg btn-group-justified hidden-xs">
 						<a href="index.html" type="button" class="btn btn-default">Home</a>
 						<a href="index.php?page=services" type="button" class="btn btn-default">Services</a>
-						<a href="news.html" type="button" class="btn btn-default">News</a>
+						<a href="sessions.html" type="button" class="btn btn-default">Sessions</a>
 						<a href="references.html" type="button" class="btn btn-default">References</a>
 						<a href="about.html" type="button" class="btn btn-default">About Us</a>
 						<a href="contact.html" type="button" class="btn btn-default">Contact</a>				
