--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -8,3 +8,6 @@
 		{% endif %}
   	{% endfor %}
 </ul>
+
+<a href="/sessions.html"><span class"glyphicon glyphicon-chevron-left"></span> Back to sessions</a>
+
