--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,7 +31,8 @@ div.menubar{
 	margin-top:0.5em;
 	margin-bottom:0.5em; 
 	padding:0;
-	padding-left:1.5em;
+	padding-left:1.2em;
+	margin-right:-0.3em;
 }
 
 div.menubar-xs{
