--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -30,16 +30,15 @@ div.headerbar{
 div.menubar{
 	margin-top:0.5em;
 	margin-bottom:0.5em; 
-	padding:0;
+	padding-right:0;
 	padding-left:1.2em;
-	margin-right:-0.3em;
 }
 
 div.menubar-xs{
 	margin-top:0.5em;
 	margin-bottom:0.5em; 
-	padding:0;
-	margin-left: 2em;
+/*	padding:0;
+	margin-left: 2em;*/
 }
 
 span.menubutton {
