Adding link to xpdays

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -109,6 +109,11 @@ span.archiwise{
 	font-size:larger;
 }
 
+img.customerlogo{
+width:160px;
+BORDER:0;
+}
+
 /* Footer ---------------------- */
 
 footer {
