First version of content ready

--- a/_includes/menubuttons.html
+++ b/_includes/menubuttons.html
@@ -2,5 +2,5 @@
 <a href="/references.html" type="button" class="btn btn-default">References</a>
 <a href="/about.html" type="button" class="btn btn-default">About Us</a>
 <a href="/sessions.html" type="button" class="btn btn-default">Sessions</a>
-<a href="/blog.html" type="button" class="btn btn-default">Blog</a>
+<!--<a href="/blog.html" type="button" class="btn btn-default">Blog</a>-->
 <a href="/contact.html" type="button" class="btn btn-default">Contact</a>	
