--- a/_includes/menubuttons.html
+++ b/_includes/menubuttons.html
@@ -1,4 +1,4 @@
-<a href="/index.html" type="button" class="btn btn-default">Home</a>
+<a href="/index.html" type="button" class="btn btn-default">Consulting</a>
 <a href="/references.html" type="button" class="btn btn-default">References</a>
 <a href="/about.html" type="button" class="btn btn-default">About Us</a>
 <a href="/sessions.html" type="button" class="btn btn-default">Sessions</a>
