--- a/_includes/menubuttons.html
+++ b/_includes/menubuttons.html
@@ -1,6 +1,6 @@
-<a href="/index.html" type="button" class="btn btn-default">Consulting</a>
-<a href="/references.html" type="button" class="btn btn-default">References</a>
+<a href="/index.html" type="button" class="btn btn-default">IT Architecture</a>
 <a href="/about.html" type="button" class="btn btn-default">About Us</a>
 <a href="/sessions.html" type="button" class="btn btn-default">Sessions</a>
 <!--<a href="/blog.html" type="button" class="btn btn-default">Blog</a>-->
+<a href="/references.html" type="button" class="btn btn-default">References</a>
 <a href="/contact.html" type="button" class="btn btn-default">Contact</a>	
